fixed Lightbox overflowing img

--- a/Image-Gallery-Js/style.css
+++ b/Image-Gallery-Js/style.css
@@ -159,4 +159,6 @@
   .lightbox img {
     width: 100%;
     border-radius: 0 0 3px 3px;
+    object-fit: cover;
+    max-height: 286px;
   }
